favicon, cv added

--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@
 .dark {
   --clr-bg: #10171a;
   --clr-bg-alt: #1B262C;
-  --clr-fg: #BBE1FA;
+  --clr-fg: #ffffff;
   --clr-fg-alt: #3282B8;
   --clr-primary: #BBE1FA;
   --shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
